TRS Ship class names

--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -10,10 +10,10 @@
  LOADING_TIP_9:0 "\"For crying out loud, how I wish sometimes that my own men could be the ones at the end of my barrel.\"\n - General Miles Fritzroy"
  LOADING_TIP_10:0 "\"Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time.\"\n - Atlantean President Avaskanta Carras"
  LOADING_TIP_11:0 "\"Knives are eating utensils, but only until a fight breaks out at the table.\"\n - Old Atlantean proverb."
- LOADING_TIP_12:0 "\"In wartime, truth is so precious that she should always be attended by a bodyguard of lies.\"\n - Winston Churchill"
- LOADING_TIP_13:0 "\"Vanquished today by mechanical force, in the future we will be able to overcome by a superior mechanical force. The fate of the world depends on it.\"\n - Charles de Gaulle"
- LOADING_TIP_14:0 "The long sobs of violins of autumn wound my heart with a monotonous languor.\n - SOE coded transmission to French resistance"
- LOADING_TIP_15:0 "A state like Switzerland, which is nothing but a pimple on the face of Europe, cannot be allowed to continue.\n- Adolf Hitler"
+ LOADING_TIP_12:0 "\"Your words are as empty as your future. You live because I allow it.\"\n - Ujjamun Neiwakxinguk of Mu to Horujj Uaqril of Geq.
+ LOADING_TIP_13:0 "\"If the British are so fond of the Geneva rules then they can follow them all they want! This is war, I subscribe to no such niceties.  \"\n - Yohannian General Southern front" #Hes using poison gasses
+ LOADING_TIP_14:0 "\"The Africans have suffered long enough! We will bring freedom to our neighbors or die trying. Damn the Europeans for their oppression of the African people! \"\n -King Roderiq I"
+ LOADING_TIP_15:0 "\"We're to blame for the war? You attacked us long before and demanded our lands and people! No! We have your men surrounded and if you're willing to let them die for your foolish pride then so be it!\"\n -Lord Inqaral Dezama, Yohannian Envoy to the Allies"
  LOADING_TIP_16:0 "\"I know my rights, namely that I have none, and therefore nothing to lose.\"\n - Sumukivi Aepa’ato"
  LOADING_TIP_17:0 "\"Dempsey? He couldn't fight his way out of an old cobweb.\"\n - General Miles Fritzroy"
  LOADING_TIP_18:0 "\"Fitzroy? That baboon's ass is dumber than my horse.\"\n - General Miles Dempsey"
@@ -22,12 +22,12 @@
  LOADING_TIP_21:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n -Yangle Waglin Lumo"
  LOADING_TIP_22:0 "\"My men will follow me into hell and back. I decide when and where they fight - not some worthless bureaucrat in London!\"\n -General Miles Dempsey"
  LOADING_TIP_23:0 "\"Our gods have cursed us, and your white god has blessed you. This is not our home any longer; it is our prison.\"\n -King Wanulu of Qlach upon surrendering to the British"
- LOADING_TIP_24:0 "Everything the sea touches is ours\n - Atlantean Marine Motto"
+ LOADING_TIP_24:0 "Everything the sea touches is ours\n - Atlantean Marine Corps Motto"
  LOADING_TIP_25:0 "\"Atlantean air power? Ha! A group of frightened school children with kites could do better!\"\n -German Messerschmitt pilot"
  LOADING_TIP_26:0 " The People \n The Gods \n The State \n - Inscription on the wall of the Blue Forum"
  LOADING_TIP_27:0 "\"Not bad for a frightened school boy with a kite! Eh, Fritz?\"\n -Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
  LOADING_TIP_28:0 "\"PAV VAKEA!\"\n - Battlecry heard on Crescent Beach, Atlantean invasion of Northern Germany"
- LOADING_TIP_29:0 "\"God does not intend for the atom to be split for war, no matter what the Americans may say.\"\n -Atlantean President Avaskanta Carras"
+ LOADING_TIP_29:0 "\"God does not intend for the atom to be split for war no matter what the Americans may say.\"\n -Atlantean President Avaskanta Carras"
  LOADING_TIP_30:0 "\"Every damned time! The Germans ruined Napoleon, they started the Great War and now they're at it again!\"\n -Augustin Lefebvre, Prime Minister of Côte des Manchots"
  LOADING_TIP_31:0 "\"The German Army is so good at playing it by ear because it does its homework.\"\n - General Nagutrul Mixernet, Atlantean High Command"
  LOADING_TIP_32:0 "\"A state has no eternal allies and no perpetual enemies. Only its interests are eternal and perpetual.\"\n -Horujj Uaqril"
@@ -58,10 +58,4 @@
  LOADING_TIP_58:0 "\"What a terrible catastrophe; outplayed once again by King Roderiq. What a terrifying work of art! Either he has spies in our own government or his brilliance rivals Napoleon. Over four hundred thousand dead on our side for barely 80 thousand of his, and now he's scant miles from the Mediterranean and shelling convoys in the Red Sea.\"\n -Winston Churchill"
  LOADING_TIP_59:0 "\"Yohannia would love to think of itself as a cornered lion, when in reality it is a whipped cur that bites the hand of its betters.\"\n -General George Livingston III of British Lemuria 1944"
  LOADING_TIP_60:0 "\"We seek the great goal of a unified world and will achieve it, but we must first finish another goal: the destruction of the Trinsuyinese state. We will not sleep till we have wiped them from the face of the earth.\"\n -Houpo'ean Communist General Lumiu'u Takagate"
- LOADING_TIP_61:0 "\"A weak and contemptible people. That is what comes from a nation that turns its face from the wars and conflicts that make it great. \"\n -Jingyao Hai Qanli, Trinsuyinese Nationalist Party Leader"
- LOADING_TIP_62:0 "\"We're to blame for the war? You attacked us long before and demanded our lands and people! No! We have your men surrounded and if you're willing to let them die for your foolish pride then so be it! \"\n -Lord Inqaral Dezama, Yohannian Envoy to the Allies"
- LOADING_TIP_63:0 "\"The Africans have suffered long enough! We will bring freedom to our neighbors or die trying. Damn the Europeans for their oppression of the African people! \"\n -King Roderiq I"
- LOADING_TIP_64:0 "\"If the British are so fond of Geneva then they can follow it all they want, i subscribe to no such niceties.  \"\n - Yohannian General Southern front" #Hes using poison gasses
- LOADING_TIP_65:0 "\"Your words are as empty as your future. You are alive, because I allow it.  \"\n - Emperor Mu to Geq Leader
- LOADING_TIP_66:0 "\"I fear that I may lose him, if he doesnt end this 'game of his'; for his façade of grandeur and hope and brilliance. He is going to get himself killed. When I visit him on the front lines, he still shows how broken he really is.\"\n - Queen Ioulitta, Wife of Roderiq
- LOADING_TIP_67:0 "\"To think he has been pushed so far that his mind, the seething hatred all focused onto one target, Britain. To face such a force that creates your worst nightmares into waking reality, monsters composed of unyielding darkness made tangible. Yes, looks can be deceiving, don’t let that calm cold stare fool you...\"\n - Queen Ioulitta, Wife of Roderiq
+ LOADING_TIP_61:0 "\"A weak and contemptible people. That is what comes from a nation that turns its face from the wars and conflicts that make it great.\"\n -Jingyao Hai Qanli, Trinsuyinese Nationalist Party Leader"
