--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -13,35 +13,35 @@
  PRJ_Qaleb_Shada:0 "Qaleb Shada"
 
 
- PRJ_silent_workhorse:0 "Silent Workhorses"
- PRJ_war_industrialist:0 "War Industrialist"
- PRJ_backroom_backstabber:0 "backroom backstaber"
- PRJ_prince_of_terror:0 "Prince of Terror"
- PRJ_armaments_organizer:0 "arnaments organizer"
- PRJ_democratic_politician:0 "democratic polititian"
- PRJ_fascist_demagogue:0 "fascist demagogue"
- PRJ_communist_revolutionary:0 "communist revolutionary"
- PRJ_grand_fleet_proponent:0 "grand fleet proponent"
- PRJ_victory_through_airpower:0 "victory through airpower"
- PRJ_rocket_scientist:0 "Rocket Scientist"
- PRJ_naval_theorist:0 "naval theorist"
- PRJ_military_theorist:0 "military theorists"
- PRJ_army_chief_morale_2:0 "army cheif morale"
- PRJ_army_chief_offensive_2:0 "army cheif offensive"
- PRJ_army_chief_drill_2:0 "army cheif drill"
- PRJ_army_chief_planning_2:0 "army chief planning"
- PRJ_navy_naval_air_defense_2:0 "naval air defense"
- PRJ_navy_fleet_logistics_3:0 "naval fleet logistics"
- PRJ_navy_chief_decisive_battle_3:0 "naval decisive battle"
- PRJ_navy_chief_maneuver_3:0 "naval chief manuver"
- PRJ_air_strategic_bombing_2:0 "air strategic bombing"
- PRJ_air_chief_old_guard:0 "air chief oldgaurd"
- PRJ_air_strategic_bombing_1:0 "Air strat bombing"
- PRJ_navy_screen_2:0 "naval screening"
- PRJ_army_regrouping_1:0 "army regrouping"
- PRJ_navy_capital_ship_3:0 "navy capital ship"
- PRJ_air_naval_strike_1:0 "air naval strike"
- PRJ_navy_carrier_2:0 "naval carrier"
+ PRJ_silent_workhorse:0 "Hufane Huruuse"
+ PRJ_war_industrialist:0 "Wakeyo Gorfu Oromigna"
+ PRJ_backroom_backstabber:0 "Constantinianus Ypsilanti"
+ PRJ_prince_of_terror:0 "Petronas Maniakes"
+ PRJ_armaments_organizer:0 "Aron Yaee"
+ PRJ_democratic_politician:0 "Girma Abebe Naoed"
+ PRJ_fascist_demagogue:0 "Colaad Xuuki"
+ PRJ_communist_revolutionary:0 "Joel Boissieu"
+ PRJ_grand_fleet_proponent:0 "Prawiraharja Usep"
+ PRJ_victory_through_airpower:0 "Gebreselassie Abal"
+ PRJ_rocket_scientist:0 "Mikias Berhanu"
+ PRJ_naval_theorist:0 "Dalmar Janogalle"
+ PRJ_military_theorist:0 "Ambrosius Prodromus"
+ PRJ_army_chief_morale_2:0 "Florian Guillaume"
+ PRJ_army_chief_offensive_2:0 "Denis Bertillon"
+ PRJ_army_chief_drill_2:0 "Mekuria Dawit"
+ PRJ_army_chief_planning_2:0 "Nuuradiin Yaxye"
+ PRJ_navy_naval_air_defense_2:0 "Gugum Raharja"
+ PRJ_navy_fleet_logistics_3:0 "Nazwari Assefa"
+ PRJ_navy_chief_decisive_battle_3:0 "Iovivus Ooryphas"
+ PRJ_navy_chief_maneuver_3:0 "Haider Dawit"
+ PRJ_air_strategic_bombing_2:0 "Tesfaye Fsiha"
+ PRJ_air_chief_old_guard:0 "Farxaan Looyaan"
+ PRJ_air_strategic_bombing_1:0 "Totong Sutikno"
+ PRJ_navy_screen_2:0 "Roger Boissonade"
+ PRJ_army_regrouping_1:0 "Maxime Azaïs"
+ PRJ_navy_capital_ship_3:0 "Marc Guignes"
+ PRJ_air_naval_strike_1:0 "Suda Maniakes"
+ PRJ_navy_carrier_2:0 "Michael Bardanes"
 
 #foci
  PRJ_save_ethiopia:0 "Intervene in Ethiopia"
