--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -46,8 +46,8 @@
  PRJ_LBA_puppet_subject_DEF:0 "the Kingdom of Tripoli"
  PRJ_EGY_puppet_subject:0 "Kingdom of Egypt"
  PRJ_EGY_puppet_subject_DEF:0 "the Kingdom of Egypt"
- PRJ_SUD_puppet_subject:0 "United Kingdom of Alodia and Makuria"
- PRJ_SUD_puppet_subject_DEF:0 "the United Kingdom of Sudan and Alodia"
+ PRJ_SUD_puppet_subject:0 "United Kingdom of Alodia, Makuria, and Sudan"
+ PRJ_SUD_puppet_subject_DEF:0 "the United Kingdom of Alodia, Makuria, and Sudan"
  PRJ_CHA_puppet_subject:0 "United Kingdom of Wadia and Sokoto"
  PRJ_CHA_puppet_subject_DEF:0 "the United Kingdom of Wadia and Sokoto"
  PRJ_GAB_puppet_subject:0 "Kingdom of Gabon"
