--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -11,7 +11,7 @@
  LOADING_TIP_10:0 "\"Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time.\"\n - Atlantean President Avaskanta Carras"
  LOADING_TIP_11:0 "\"Knives are eating utensils, but only until a fight breaks out at the table.\"\n - Old Atlantean proverb."
  LOADING_TIP_12:0 "\"Your words are as empty as your future. You live because I allow it.\"\n - Ujjamun Neiwakxinguk of Mu to Horujj Uaqril of Geq.
- LOADING_TIP_13:0 "\"If the British are so fond of the Geneva rules then they can follow them all they want! This is war, I subscribe to no such niceties.  \"\n - Yohannian General Southern front" #Hes using poison gasses
+ LOADING_TIP_13:0 "\"If the British are so fond of the Geneva rules then they can follow them all they want! This is war, I subscribe to no such niceties.  \"\n - Yohannian General Beryihun Zeruyob Southern front" #Hes using poison gasses
  LOADING_TIP_14:0 "\"The Africans have suffered long enough! We will bring freedom to our neighbors or die trying. Damn the Europeans for their oppression of the African people! \"\n -King Roderiq I"
  LOADING_TIP_15:0 "\"We're to blame for the war? You attacked us long before and demanded our lands and people! No! We have your men surrounded and if you're willing to let them die for your foolish pride then so be it!\"\n -Lord Inqaral Dezama, Yohannian Envoy to the Allies"
  LOADING_TIP_16:0 "\"I know my rights, namely that I have none, and therefore nothing to lose.\"\n - Sumukivi Aepa’ato"
