--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -3,7 +3,7 @@
  LOADING_TIP_2:0 "\"You drive tanks down the streets, and then expect us to believe you when you call for peace?\"\n - Fijnland's Prime Minister, Willem van den Bergh"
  LOADING_TIP_3:0 "\"Vorwärts! Vorwärts und steche ihnen in die Augen!\"\n - Heinrich Schmidt, F.S.M. Freikorps."
  LOADING_TIP_4:0 "\"You can live your life as a coward, or you die as a hero!\"\n - General Dajjar Zohoq addressing his troops a moment before an enemy bullet killed him."
- LOADING_TIP_5:0 "\"As one places stones on a Go board, so have I maneuvered Trinsuyin. They shall serve us; their new masters.\"\n - Japanese Emperor Shōwa" 
+ LOADING_TIP_5:0 "\"As one places stones on a Go board, so have I maneuvered Trinsuyin. They shall serve us; their new masters.\"\n - Japanese Emperor Showa" #Hoi4 does not recognise the weird o
  LOADING_TIP_6:0 "\"Praise the Lord and pass the ammunition!\"\n - Chaplain Forgy, USS New Orleans"
  LOADING_TIP_7:0 "\"If fighting is sure to result in victory, then you must fight!\"\n - Sun Tzu"
  LOADING_TIP_8:0 "\"No three things are as sure as French spirit, Atlantean cunning, and American unpredicatablity.\"\n - General Miles Dempsey"
