--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -984,7 +984,7 @@
  PRJ_light_tank_equipment_1:0 "Pertanoona 7 - Phronsa"
  PRJ_light_tank_equipment_1_short:0 "Phronsa"
  PRJ_light_tank_equipment_1_desc:0 "The Pertanoona 7 - Phronsa first introduced in 1938 and the first tank light tanks to see operations on the front lines ."
- PRJ_light_tank_artillery_equipment_1:0 Pertanoona 7 - Tigardy Axiqan"
+ PRJ_light_tank_artillery_equipment_1:0 "Pertanoona 7 - Tigardy Axiqan"
  PRJ_light_tank_artillery_equipment_1_short:0 "P7/Yan"
  PRJ_light_tank_artillery_equipment_1_desc:0 "The P7/Yan is a short 3in cannon bolted over a  Pertanoona 7 chassis."
  PRJ_light_tank_destroyer_equipment_1:0 "Pertanoona 7 - Bumietya Axiqan "
