--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -3,11 +3,11 @@
  LOADING_TIP_2:0 "\"You drive tanks down the streets, and then expect us to believe you when you call for peace?\"\n - Fijnland's Prime Minister, Willem van den Bergh"
  LOADING_TIP_3:0 "\"Vorwärts! Vorwärts und steche ihnen in die Augen!\"\n - Heinrich Schmidt, F.S.M. Freikorps."
  LOADING_TIP_4:0 "\"You can live your life as a coward, or you die as a hero!\"\n - General Dajjar Zohoq addressing his troops a moment before an enemy bullet killed him."
- LOADING_TIP_5:0 "\"As one places stones on a Go board, so have I maneuvered Trinsuyin. They shall serve us; their new masters.\"\n - Japanese Emperor Showa" #Hoi4 does not recognise the weird o
+ LOADING_TIP_5:0 "\"As one places stones on a Go board, so have I maneuvered Trinsuyin. They shall serve us, their new masters.\"\n - Japanese Emperor Showa" #Hoi4 does not recognise the weird o
  LOADING_TIP_6:0 "\"Praise the Lord and pass the ammunition!\"\n - Chaplain Forgy, USS New Orleans"
  LOADING_TIP_7:0 "\"If fighting is sure to result in victory, then you must fight!\"\n - Sun Tzu"
  LOADING_TIP_8:0 "\"No three things are as sure as French spirit, Atlantean cunning, and American unpredicatablity.\"\n - General Miles Dempsey"
- LOADING_TIP_9:0 "\"For crying out loud, how I wish sometimes that my own men could be the ones at the end of my barrel.\"\n - General Miles Fritzroy"
+ LOADING_TIP_9:0 "\"For crying out loud, how I wish sometimes that my own men could be the ones at the end of my barrel.\"\n - General Angus Fritzroy"
  LOADING_TIP_10:0 "\"Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time.\"\n - Atlantean President Avaskanta Carras"
  LOADING_TIP_11:0 "\"Knives are eating utensils, but only until a fight breaks out at the table.\"\n - Old Atlantean proverb."
  LOADING_TIP_12:0 "\"Your words are as empty as your future. You live because I allow it.\"\n - Ujjamun Neiwakxinguk of Mu to Horujj Uaqril of Geq.
@@ -15,7 +15,7 @@
  LOADING_TIP_14:0 "\"The Africans have suffered long enough! We will bring freedom to our neighbors or die trying. Damn the Europeans for their oppression of the African people! \"\n -King Roderiq I"
  LOADING_TIP_15:0 "\"We're to blame for the war? You attacked us long before and demanded our lands and people! No! We have your men surrounded and if you're willing to let them die for your foolish pride then so be it!\"\n -Lord Inqaral Dezama, Yohannian Envoy to the Allies"
  LOADING_TIP_16:0 "\"I know my rights, namely that I have none, and therefore nothing to lose.\"\n - Sumukivi Aepa’ato"
- LOADING_TIP_17:0 "\"Dempsey? He couldn't fight his way out of an old cobweb.\"\n - General Miles Fritzroy"
+ LOADING_TIP_17:0 "\"Dempsey? He couldn't fight his way out of an old cobweb.\"\n - General Angus Fritzroy"
  LOADING_TIP_18:0 "\"Fitzroy? That baboon's ass is dumber than my horse.\"\n - General Miles Dempsey"
  LOADING_TIP_19:0 "\"Four corners. Four Winds. Slide home the rifle bolt.\"\n -Coded Atlantean Transmission"
  LOADING_TIP_20:0 "\"By bullet, by sword, or by blood - as God wills it!\"\n -British Lemurian Garrison Motto"
