New Localizations in yohannia new Loading tip

--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -43,9 +43,31 @@
  PRJ_air_naval_strike_1:0 "Suda Maniakes"
  PRJ_navy_carrier_2:0 "Michael Bardanes"
 
+
+ PRJ_roderiq_bcomes_a_leader:0 "King Roderiq becomes a Field Marshal"
+
 #foci
  PRJ_save_ethiopia:0 "Intervene in Ethiopia"
  PRJ_save_ethiopia_desc:0 "The imperial forces of Rome march on one of the last free african nations. Lord *name* suggests we intervene immediatly ."
  PRJ_abandon_ethiopia:0 "Leave Ethiopia to her fate"
- PRJ_abandon_ethiopia_desc:0 "The imperial forces of Rome march on one of the last free african nations. Lord *name* suggests we let the ethiopians sort it out. Yohannian blood must not be spilt at this time."
-
+ PRJ_abandon_ethiopia_desc:0 "The imperial forces of Rome march on one of the last free african nations. Lord *different name* suggests we let the ethiopians sort it out. Yohannian blood must not be spilt at this time."
+ 
+ #Left
+ PRJ_steady_as_she_goes:0 "Status Quo"
+ PRJ_steady_as_she_goes_desc:0 "The situation outside of the country is to chaotic, Let us not do anything radical."
+ PRJ_kings_budget:0 "Royal Highways."
+ PRJ_kings_budget_desc:0 "Continuing the massive undertaking, More governmental initiative to build roads must be made conecting every faccit of the empire."
+ PRJ_foster_war_support:0 "Prepare for war"
+ PRJ_foster_war_support_desc:0 "By reminding the populace of the treats around us they will be ready for war when the time comes."
+ PRJ_stir_up_ENG_hatred:0 "Imperial Fears"
+ PRJ_stir_up_ENG_hatred_desc:0 "We must make it clear to our subjects that Britain is not a friend, she has been eying our land since 1900 and her anoyance with us is very well known."
+ PRJ_recruitment:0 "Recruitment Pamphlets"
+ PRJ_recruitment_desc:0 "It is every loyal subjects duty to serve his country. By giving some incentives we can surely gain more support for the military"
+ PRJ_the_mausoleum:0 "King Otto's Mausoleum" #of the Arbiter
+ PRJ_the_mausoleum_desc:0 "King Otto Died just as the Great Depresion kicked in, its about time we give respect to the man who saved our nation from subjigation from the British"
+ PRJ_kings_vendetta:0 "Roderiqs War"
+ PRJ_kings_vendetta_desc:0 "With the european powers currently busy killing eachother in Europe, King Roderiq has made it clear that this is our chanc to free the rest of africa from subjugation and reclaim what has been lost. Africa's Destiny is in his hands."
+ PRJ_warrior_king:0 "Warrior King"
+ PRJ_warrior_king_desc:0 "The King will prove his mettle. He has joined his fellow soldiers on the frontlines!" #need to seperate joining army to add here
+ PRJ_faith_and_arms:0 "Faith and Arms"
+ PRJ_faith_and_arms_desc:0 "We must believe in our King. If he believes we can go toe to toe with the largest empire in history them we must rise to the occasion."
