--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -10,7 +10,7 @@
  LOADING_TIP_9:0 "\"For crying out loud, how I wish sometimes that my own men could be the ones at the end of my barrel.\"\n - General Angus Fritzroy"
  LOADING_TIP_10:0 "\"Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time.\"\n - Atlantean President Avaskanta Carras"
  LOADING_TIP_11:0 "\"Knives are eating utensils, but only until a fight breaks out at the table.\"\n - Old Atlantean proverb."
- LOADING_TIP_12:0 "\"Your words are as empty as your future. You live because I allow it.\"\n - Ujjamun Neiwakxinguk of Mu to Horujj Uaqril of Geq.
+ LOADING_TIP_12:0 "\"Your words are as empty as your future. You live because I allow it.\"\n - Ujjamun Neiwakxinguk of Mu to Horujj Uaqril of Geq."
  LOADING_TIP_13:0 "\"If the British are so fond of the Geneva rules then they can follow them all they want! This is war, I subscribe to no such niceties.  \"\n - Yohannian General Beryihun Zeruyob Southern front" #Hes using poison gasses
  LOADING_TIP_14:0 "\"The Africans have suffered long enough! We will bring freedom to our neighbors or die trying. Damn the Europeans for their oppression of the African people! \"\n -King Roderiq I"
  LOADING_TIP_15:0 "\"We're to blame for the war? You attacked us long before and demanded our lands and people! No! We have your men surrounded and if you're willing to let them die for your foolish pride then so be it!\"\n -Lord Inqaral Dezama, Yohannian Envoy to the Allies"
@@ -68,3 +68,4 @@
  LOADING_TIP_68:0 "\"I can no longer deny it; the Federal Republic of Kashvan has lost the war. We no longer have the strength to fight. I wish to not see more Kashvan blood spilled.\"\n -Kashvan First President, Hanutenga after the fall of Ilayaci and Shakwaram"
  LOADING_TIP_69:0 "\"After all of our sacrifice in keeping Pantiya out of Kashvan hands, we aren’t even invited to plead our case for independence? This is a crime against the Pantiyans and will not go unanswered!\"\n -Ilandarshe Meparkarsu, leader of the semi-collaborationist rebel cell, the Pantiyan Liberation Collective"
  LOADING_TIP_70:0 "\"Why does anyone fear the Europeans? We are sweeping through Pantiya and we will soon do the same to the rest of these European colonies. This continent belongs to us, not the damned Europeans!\"\n -Kashvan General N’uturgal after the fall of the city of Peruvala"
+ LOADING_TIP_71:0 "\"I've brought the British and Atlanteans death, and and forcing them to kneel on my own. So no I cant assist in further military action in the Indo Lemurian ocean. We do not have the kind of infrastructure needed to fight at sea. Let alone then men to spare" \"\n - King Roderiq to Kashvan envoys"
