--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -1003,7 +1003,7 @@
  PRJ_light_tank_destroyer_equipment_2:0 "Sheeprana 16 - Bumietya Axiqan"
  PRJ_light_tank_destroyer_equipment_2_short:0 "Shp/16-Ban"
  PRJ_light_tank_destroyer_equipment_2_desc:0 "The Shp/16-Ban was a prototyped but never built tank destroyer project, deamed to unweildy by its test piliots and mechanicst stated its dificulty to maintain would be easier to just build a new one thant to repair it."
- PRJ_light_tank_aa_equipment_2:0 Sheeprana 16 - Kar-Hotwana"
+ PRJ_light_tank_aa_equipment_2:0 "Sheeprana 16 - Kar-Hotwana"
  PRJ_light_tank_aa_equipment_2_short:0 "Shp/16-Kna"
  PRJ_light_tank_aa_equipment_2_desc:0 "A double 30mm anti-air automatic cannon mounted on a Pertanoona 16 chassis."
  #Errror
